--- a/Traffic Lights/Base.lproj/Main.storyboard
+++ b/Traffic Lights/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="dRm-Hy-knT" userLabel="Main Stack View">
-                                <rect key="frame" x="114" y="64" width="200.33333333333337" height="808"/>
+                                <rect key="frame" x="114.00000000000001" y="64" width="200.33333333333337" height="808"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="fA6-wl-fVD">
                                         <rect key="frame" x="4.3333333333333286" y="0.0" width="191.33333333333337" height="638"/>
@@ -35,7 +35,6 @@
                                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Khq-By-eYM">
                                         <rect key="frame" x="0.0" y="738" width="200.33333333333334" height="70"/>
@@ -48,6 +47,9 @@
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="START"/>
+                                        <connections>
+                                            <action selector="changeLights:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i4w-UE-Kgh"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -64,6 +66,12 @@
                             <constraint firstItem="dRm-Hy-knT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iMm-2F-jws"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenLight" destination="Xej-Ui-w7q" id="XW1-k4-V3y"/>
+                        <outlet property="redLight" destination="icP-K0-kcW" id="9Og-SF-Xzf"/>
+                        <outlet property="startButton" destination="Khq-By-eYM" id="xnU-Cg-w7N"/>
+                        <outlet property="yellowLight" destination="wgY-h3-fN6" id="gNk-vO-EbI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -73,9 +81,6 @@
     <resources>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
